# InvestorDigest

./: .env.local.example  .gitignore  README.md  main.py  pyproject.toml
investor_digest/: __init__.py  app.py  cli.py  config.py  llm_client.py  parser.py  pipeline.py  schemas.py
investor_digest/static/: app.js  index.html  styles.css
